--- a/Pages/newreturnRequest.cshtml
+++ b/Pages/newreturnRequest.cshtml
@@ -167,7 +167,7 @@
             </div>
         </div>
         <div class="d-flex gap-3">
-            <a href="/ManageItems" class="btn btn-outline-secondary">Cancel</a>
+            <a href="/ViewReturnRequests" class="btn btn-outline-secondary">Cancel</a>
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
